- NEW: Various options has been added for the keystone blocks:
  - "Show timer bar"
  - "Show death count"
  - "Enemy forces format
  - "Percentage format"
- FIX: A case where the timer was launched two times.
- FIX: [BFA] An error lua triggered when there is no quest on the current map.
- FIX: The quest level will now be correctly updated.


[1.0.11]
- Updated to apply the changes done in the idle mode by the addon core.

[1.0.10]
- [BFA Only] Made improvements how the idle mode is used by Quest module. A quest will now fade if this one is not in the current map.
Moreover, when you're navigating throught zones from WorldMapFrame, the addon will fade the quests which are not in the zone you're looking.
NOTE: As said previously, this feature is only avaliable if the client is under the 8.0 (BFA), and the idle mode feature  is enabled.

[1.0.9]
- Updated the addon for applying the changes have been done in the addon core.
- Added the idle mode feature for all contents. Currently, the current state is simply temporary, and other things are planned about it.

[1.0.8]
- Reworked the bonus objectives module. Fixing by the way, an issue where the module isn't loaded when the player is already in a bonus objectives zone.
- The level is no longer displayed for bonus objectives.

[1.0.7]
- [BFA] Fixed an error when the player enters in dungeons.
- Fixed errors relative to Bonus Objectives.
- Started to implement the idle mode feature provided by the addon core.
- Updated the addon to apply the changes bring by EskaTracker.

[1.0.6]
- Updated to add the idle mode (very experimental).

[1.0.5]
- You can now display the quest items buttons in using the action bars feature.
- Fixed an error which preventing the keystone (mythic +) module to work.
- Setup the remain localization files for linking the addon with localization system provided by Curse.

[1.0.4]
- The 'Quest' popups are now implemented (this will use the notifications system for displaying them).